Revert "fix: Improved legend vertical alignment (#235)"
This reverts commit 635cfe9a8b4e247d0b2aae6d0a6e771f9c1a1e62.

--- a/src/internal/components/chart-legend/styles.scss
+++ b/src/internal/components/chart-legend/styles.scss
@@ -63,7 +63,6 @@
   @include styles.default-text-style;
 
   display: inline-flex;
-  align-items: center;
   padding-block: 0;
   padding-inline: 0;
   border-block: 0;
